--- a/pom.xml
+++ b/pom.xml
@@ -4,29 +4,55 @@
   <groupId>br.com.gabrielsaraiva.dynamicsettings</groupId>
   <artifactId>dynamic-settings</artifactId>
   <packaging>jar</packaging>
-  <version>0.1 - alpha</version>
+  <version>0.1</version>
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version>
         <configuration>
           <source>8</source>
           <target>8</target>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.1.0</version>
+        <configuration>
+          <archive>
+            <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+          </archive>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19.1</version>
+        <configuration>
+          <includes>
+            <include>**/*Test.java</include>
+          </includes>
+        </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-surefire-provider</artifactId>
+            <version>1.1.0</version>
+          </dependency>
+          <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.3.0-M1</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
   <name>dynamic-settings</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-
-    <!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
-    <dependency>
-      <groupId>org.jacoco</groupId>
-      <artifactId>jacoco-maven-plugin</artifactId>
-      <version>0.8.1</version>
-    </dependency>
 
     <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-dynamodb -->
     <dependency>
@@ -49,6 +75,7 @@
       <version>5.3.0-M1</version>
       <scope>test</scope>
     </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
     <dependency>
       <groupId>org.mockito</groupId>
@@ -59,4 +86,14 @@
 
 
   </dependencies>
+  <distributionManagement>
+    <repository>
+      <id>bintray-dynamicsettings-DynamicSettings</id>
+      <name>dynamicsettings-DynamicSettings</name>
+      <url>
+        https://api.bintray.com/maven/dynamicsettings/DynamicSettings/bintray-dynamicsettings-DynamicSettings/;publish=1
+      </url>
+    </repository>
+  </distributionManagement>
+
 </project>
