--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <version>3.1.0</version>
-        <configuration>
-          <archive>
-            <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
-          </archive>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -90,9 +85,7 @@
     <repository>
       <id>bintray-dynamicsettings-DynamicSettings</id>
       <name>dynamicsettings-DynamicSettings</name>
-      <url>
-        https://api.bintray.com/maven/dynamicsettings/DynamicSettings/bintray-dynamicsettings-DynamicSettings/;publish=1
-      </url>
+      <url>https://api.bintray.com/maven/dynamicsettings/DynamicSettings/dynamic-settings/;publish=1</url>
     </repository>
   </distributionManagement>
 
